--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
