--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.19",
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "firebase": "^11.0.1",
